--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style rel="stylesheet" href="style.css"></style>
+    <title>M Ahmad Amin | Personal Web Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="home">
+        <div class="navbar">
+
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
