Add navbar and home content

--- a/index.html
+++ b/index.html
@@ -5,13 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M Ahmad Amin | Personal Web Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="home">
-        <div class="navbar">
+    <!-- Home section -->
+    <section class="home">
 
+
+
+        <!-- Header -->
+        <div class="header">
+            <!-- Navbar -->
+            <div class="navbar">
+                <a href=".home" class="nav-options home-btn">Home</a>
+                <a href=".skills" class="nav-options">Skills</a>
+                <a href=".projects" class="nav-options">Projects</a>
+                <a href=".contact" class="nav-options">Contact</a>
+            </div>
+            <!-- Portfolio Heading -->
+            <div class="port-heading">
+                <h1>Portfolio</h1>
+            </div>
         </div>
-    </div>
+
+
+
+        <!-- Home text -->
+        <div class="home-text">
+            <h2>Hello, My name is</h2>
+            <h1>M Ahmad Amin</h1>
+            <h3>I’m a web developer who builds clean and responsive websites.</h3>
+        </div>
+
+
+
+        <!-- Home animation -->
+        <div class="home-animation">
+            <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+            <dotlottie-player src="https://lottie.host/34f76648-2e01-4c13-9b85-fc579315c15f/5Qkf0R6MZD.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
